examples/test/testpolicy19147.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19147
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key19: value47
      key6: value22
      key14: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value7
          key27: value37
          key11: value9
      podSelector:
        matchLabels:
          key11: value15
          key1: value15
          key20: value47
